Unbound Crops:
Added static, non-growing versions for every growth stage of all vanilla crops (Wheat, Carrots, Potatoes, Beetroot, Nether Wart, Melon/Pumpkin Stems, Torchflower, Pitcher Plant, and Cocoa).

This resolves the critical bug where previous attempts would revert to vanilla blocks upon placement.